--- a/app/src/main/res/layout/activity_show_info.xml
+++ b/app/src/main/res/layout/activity_show_info.xml
@@ -45,52 +45,54 @@
         android:text="Ожидание команды"/> -->
 
 
-    <ScrollView android:layout_height="465dp"
-        android:layout_width="356dp"
-        app:layout_constraintVertical_bias="0.43"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="13dp"
+        android:clickable="false"
+        android:orientation="vertical"
+        android:verticalScrollbarPosition="defaultPosition"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/scroll"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/lblPlacer"
-        android:layout_marginRight="32dp"
-        android:layout_marginEnd="32dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-
-        <TableLayout
-            android:id="@+id/table"
-            android:layout_width="match_parent"
+        <ScrollView
+            android:id="@+id/scroll"
+            android:layout_width="414dp"
             android:layout_height="match_parent"
-            android:clickable="true"
-            android:gravity="center_horizontal"
-            android:scrollbarAlwaysDrawHorizontalTrack="false"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_marginEnd="32dp"
+            android:layout_marginRight="32dp">
 
-            <LinearLayout
+
+            <TableLayout
+                android:id="@+id/table"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:baselineAligned="true"
-                android:foregroundGravity="bottom"
-                android:orientation="horizontal"></LinearLayout>
+                android:alwaysDrawnWithCache="false"
+                android:baselineAligned="false"
+                android:clickable="true"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                android:scrollbarAlwaysDrawHorizontalTrack="false"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        </TableLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:baselineAligned="true"
+                    android:foregroundGravity="bottom"
+                    android:orientation="horizontal"></LinearLayout>
 
-</ScrollView>
+            </TableLayout>
 
-    <TableRow android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginRight="8dp"
-        android:layout_marginEnd="8dp"
-        android:clickable="false"
-        android:layout_marginBottom="130dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginLeft="4dp"
-        android:layout_marginStart="4dp"> </TableRow>
+        </ScrollView>
+    </TableRow>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
